  - move function.assign.php to compiler.assign.php (messju)
  - add property $tpl_error_reporting (messju)
  - remove property $undefined. "null" is used literally instead (messju)

Version 2.6.0 (Nov 19, 2003)
----------------------------

  - move Smarty::quote_replace() to Smarty_Compiler::_quote_replace() (messju)
  - remove import of of attributes of {include_php} to php's namespace.
    use $params[name] instead (messju)

Version 2.6.0-RC3 (Nov 13, 2003)
--------------------------------

  - fix handling of $var.key inside [] (messju)
  - fix handling of assign inside {insert}-tags (messju)
  - fix handling if [...] inside triple-quotes in config-files (messju)
  - fix handling of simple-math-operators inside modifiers (Dominik, messju)
  - fix handling of trailing-slashes in open_basedir in
    smarty_core_create_dir_structure() (packman, messju)

Version 2.6.0-RC2 (Oct 8, 2003)
-------------------------------

  - apply modifiers only once to section-loop and foreach-from attrs (messju)
  - remove use of _smarty_cached_paths-files (messju)
  - remove Smarty::_plugin_implementation_exists() - use is_callable() (messju)
  - ignore {strip}/{/strip) inside {strip}-blocks (messju)
  - fixed removal of leading/trailing newlines in {strip}-blocks (messju)
  - fixed proper escaping of " and ' with escape:javascript (messju)
  - fixed bug in traversal of $smarty->plugins_dir-array. now the
    first matching plugin is taken (messju)
  - moved {strip} back into the compiler (messju)
  - fixed config_load: handling of section-attribute and use of
    multiple config-files in one template (atu, messju)

Version 2.6.0-RC1 (August 11, 2003)
-----------------------------------

  - fixed status-header for cache_modified_check under cgi-sapi (messju)
  - added optional parameter $cache_attrs to register_function() and
    register_block(). $cache_attrs is an array containing attribute-
    names that should be cached on calls to functions that have